# fossology

./: .gitignore  CMakeLists.txt
.github/workflows/: build-test.yml  cpp-agent-tests.yml  phpunit-tests.yml  static-checks.yml
cmake/: FoPackaging.cmake  FoUtilities.cmake  FoVersionFile.cmake  SetDefaults.cmake  TestInstall.make.in
install/: CMakeLists.txt  fo-postinstall.in
install/db/: dbcreate.in  dbmigrate_change_db_encoding.php.in  (+1 more)
src/: CMakeLists.txt  composer.json.in  phpunit-bootstrap.php
src/adj2nest/: CMakeLists.txt
src/adj2nest/agent/: CMakeLists.txt
src/buckets/: CMakeLists.txt
src/buckets/agent/: CMakeLists.txt
src/cli/: CMakeLists.txt  fo_wrapper.php.in
src/copyright/: CMakeLists.txt
src/copyright/agent/: CMakeLists.txt  regexConfProvider.cc
src/copyright/agent_tests/: CMakeLists.txt
src/copyright/agent_tests/Functional/: cli_test.sh  schedulerTest.php
src/copyright/agent_tests/Unit/: test_scanners.cc
src/debug/: CMakeLists.txt
src/decider/: CMakeLists.txt
src/decider/agent/: CMakeLists.txt  version.php.in
src/decider/agent_tests/: CMakeLists.txt
src/decider/agent_tests/Functional/: SchedulerTestRunnerCli.php
src/deciderjob/: CMakeLists.txt
src/deciderjob/agent/: CMakeLists.txt  version.php.in
src/deciderjob/agent_tests/: CMakeLists.txt
src/delagent/: CMakeLists.txt
src/delagent/agent/: CMakeLists.txt
src/delagent/agent_tests/: CMakeLists.txt
src/delagent/agent_tests/Unit/: testInitDB.sh  testInitRepo.sh
src/demomod/: CMakeLists.txt
src/demomod/agent/: CMakeLists.txt
src/example_wc_agent/: CMakeLists.txt
src/example_wc_agent/agent/: CMakeLists.txt
src/genvendor/: CMakeLists.txt  ComposerInstall
src/lib/: CMakeLists.txt
src/lib/c/: CMakeLists.txt
src/lib/c/tests/: CMakeLists.txt  testClib.php  test_fossscheduler.c
src/lib/cpp/: CMakeLists.txt
src/lib/cpp/tests/: CMakeLists.txt  test_fossdbmanagerclass.cc
src/lib/php/: CMakeLists.txt  bootstrap.php.in  common-license-file.php  services.xml.in
src/lib/php/Test/: TestInstaller.php  TestPgDb.php
src/lib/php/tests/: CMakeLists.txt  test_common_cache.php  test_common_license_file.php  test_common_menu.php  test_common_pkg.php  test_common_sysconfig.php  test_fossdash_config.php
src/maintagent/: CMakeLists.txt
src/maintagent/agent/: CMakeLists.txt
src/mimetype/: CMakeLists.txt
src/mimetype/agent/: CMakeLists.txt
src/mimetype/agent_tests/: CMakeLists.txt
src/mimetype/agent_tests/Functional/: cliParamsTest4Mimetype.php
src/mimetype/agent_tests/Unit/: testRun.c
src/monk/: CMakeLists.txt
src/monk/agent/: CMakeLists.txt  diff.c  genSquareVisitor
src/monk/agent/generator/: genSquareVisitor
src/monk/agent_tests/: CMakeLists.txt
src/monk/agent_tests/Functional/: bulkTest.php  cliTest.php  schedulerTest.php
src/monk/agent_tests/Unit/: run_tests.c  test_license.c  test_string_operations.c
src/ninka/: CMakeLists.txt
src/ninka/agent/: CMakeLists.txt  databasehandler.cc
src/nomos/: CMakeLists.txt
src/nomos/agent/: CMakeLists.txt  GENSEARCHDATA  licenses.c  nomos_regex.h  nomos_utils.h  parse.c
src/nomos/agent/generator/: CHECKSTR  GENSEARCHDATA  PRECHECK
src/nomos/agent_tests/: CMakeLists.txt
src/nomos/agent_tests/Functional/: CommonCliTest.php  shunit2
src/nomos/agent_tests/Unit/: test_DoctoredBuffer.c  test_nomos_gap.c
src/ojo/: CMakeLists.txt
src/ojo/agent/: CMakeLists.txt
src/ojo/agent_tests/: CMakeLists.txt
src/ojo/agent_tests/Functional/: SchedulerTestRunnerCli.php  SchedulerTestRunnerScheduler.php  cli_test.sh  schedulerTest.php
src/pkgagent/: CMakeLists.txt
src/pkgagent/agent/: CMakeLists.txt
src/pkgagent/agent_tests/: CMakeLists.txt
src/pkgagent/agent_tests/Functional/: ft_cliPkgagentTest.php
src/pkgagent/agent_tests/Unit/: testGetMetadata.c  testGetMetadataDebBinary.c  testGetMetadataDebSource.c  testRun.c
src/readmeoss/: CMakeLists.txt
src/readmeoss/agent/: CMakeLists.txt  version.php.in
src/regexscan/: CMakeLists.txt
src/regexscan/agent/: CMakeLists.txt
src/reportImport/: CMakeLists.txt
src/reportImport/agent/: CMakeLists.txt  version.php.in
src/reso/: CMakeLists.txt
src/reso/agent/: CMakeLists.txt  version.php.in
src/reuser/: CMakeLists.txt
src/reuser/agent/: CMakeLists.txt  version.php.in
src/reuser/agent_tests/: CMakeLists.txt
src/scheduler/: CMakeLists.txt  TestInstall.make
src/scheduler/agent/: CMakeLists.txt
src/scheduler/agent/defconf/init.d/: fossology.in
src/scheduler/agent_tests/: CMakeLists.txt
src/softwareHeritage/: CMakeLists.txt
src/softwareHeritage/agent/: CMakeLists.txt  version.php.in
src/spasht/: CMakeLists.txt
src/spasht/agent/: CMakeLists.txt  version.php.in
src/spdx2/: CMakeLists.txt
src/spdx2/agent/: CMakeLists.txt
src/spdx2/agent_tests/: CMakeLists.txt
src/spdx2/agent_tests/Functional/: fo_report.sql
src/testing/db/: createEmptyTestEnvironment.php
src/testing/db/c/: CMakeLists.txt  libfodbreposysconf.c
src/testing/lib/c/: CMakeLists.txt
src/unifiedreport/: CMakeLists.txt
src/unifiedreport/agent/: CMakeLists.txt  version.php.in
src/unifiedreport/agent_tests/: CMakeLists.txt
src/unifiedreport/agent_tests/Functional/: fo_report.sql
src/ununpack/: CMakeLists.txt
src/ununpack/agent/: CMakeLists.txt
src/ununpack/agent_tests/: CMakeLists.txt
src/ununpack/agent_tests/Functional/: cliParamsTest4UnunpackException.php  cliParamsTest4UnunpackNormal.php  utility.php
src/ununpack/agent_tests/Unit/: run_tests.c  test_Checksum.c  test_ContainerInfo.c  test_CopyFile.c  test_DBInsert.c  test_FindCmd.c  test_IsFunctions.c  test_Prune.c  test_RunCommand.c  test_Traverse.c  test_TraverseChild.c  test_TraverseStart.c  test_ununpack-ar.c  test_ununpack-disk.c  test_ununpack-iso.c
src/wget_agent/: CMakeLists.txt
src/wget_agent/agent/: CMakeLists.txt
src/wget_agent/agent_tests/: CMakeLists.txt
src/wget_agent/agent_tests/Functional/: cliParamsTest4WgetAgent.php
src/wget_agent/agent_tests/Unit/wget_agent/: testDBLoadGold.c
src/www/: CMakeLists.txt
utils/: fo-cleanold  fo-installdeps
(+2 files in other folders)
