cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(adj2nest LANGUAGES C)

# set defaults

include(${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/SetDefaults.cmake)


add_subdirectory(agent)

generate_version()

install(DIRECTORY ui
    DESTINATION ${FO_MODDIR}/${PROJECT_NAME}
    COMPONENT adj2nest
    FILES_MATCHING 
    PATTERN *.php)


install(FILES "${PROJECT_BINARY_DIR}/VERSION" adj2nest.conf 
    DESTINATION ${FO_MODDIR}/${PROJECT_NAME}
    COMPONENT adj2nest)

add_symlink()
